--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
 </head>
 <body>
 <h2>您好，感谢您找到了这里。</h2>
+	
 <h4>在写这个html的时候，忽然发现自己无话可说了。</h4>
+	
 <p>想起来真是荒谬啊，想当初自己作文还在某班上拿过满分的，如今面对这个github，却什么也写不出来。</p>
+	
 <p>如果您看到这了，我希望您能把剩下的内容看完。</p>
+	
 <p>转瞬之间，我的小学生涯也走到了尽头。</p>
+	
 <p>在这六年的学习间，我见到了很多人，错过了很多事，也寻觅着很多，但是……最终……真正得到了些什么呢？</p>
+	
 <p>啊不好意思，感觉自己多愁善感了，看到了文章就在这边写这么多。我语文不好，请见谅。</p>
+	
 <p>总感觉这六年啥都没做，就混吃混喝了六年。</p>
+	
 <p>但是，这六年，我见到了你。</p>
+	
+<p>在这六年结束之时，当我最后一次回望这些时光时，我又一次见到了你。</p>
+	
+<p>你可能是我人生的一位过客，你可能是是我的朋友，但在六年结束之际，这些都不重要。</p>
+	
+<p>至少，当我向未来三年的初中生活进发时，我的胸膛里有你的鼓励，有你的关怀，这就够了。</p>
+	
+<p>或许读到这里，你已经知道了这道题的答案。</p>
+	
+<p>或许你会感到惊异，这次的解密赛为何格外简单？</p>
+	
+<p>累了呗。我想。</p>
+	
+<p>跑了六年，不累也不可能了。</p>
+	
+<p>对不起，我似乎又忘记了我要给你传递的——答案。</p>
+	
+<p>这次的答案是Nothing。</p>
+	
+<p>这次比赛的主题就是这些文字。希望在接下来的时光里，这些文字能给你一些安慰，在你伤心之时，能给你一种前行的力量。</p>
+	
+<p>我想，应该这就够了吧……</p>	
 </body>
 </html>
